feat: Pretendard 폰트 적용용

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -67,6 +67,14 @@ import { AstroFont } from 'astro-font'
 <!-- RSS auto-discovery -->
 <link rel='alternate' type='application/rss+xml' title={siteConfig.title} href='/rss.xml' />
 
+<!-- Pretendard Font -->
+<link
+	rel='stylesheet'
+	as='style'
+	crossorigin
+	href='https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css'
+/>
+
 <AstroFont
 	config={[
 		{
