--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -81,25 +81,9 @@ const articleDate = pubDate.toISOString()
 				const index = document.querySelector(`aside a[href="#${entry.target.id}"]`)
 
 				if (entry.isIntersecting) {
-					index?.classList.remove('bg-slate-200', 'dark:bg-slate-800') // remove bg
-					index?.classList.add(
-						'bg-indigo-600',
-						'dark:bg-indigo-700',
-						'text-white',
-						'font-bold',
-						'transition-colors',
-						'duration-200'
-					)
+					index?.classList.add('font-bold', 'text-indigo-600', 'dark:text-indigo-400')
 				} else {
-					index?.classList.add('bg-slate-200', 'dark:bg-slate-800') // add bg
-					index?.classList.remove(
-						'bg-indigo-600',
-						'dark:bg-indigo-700',
-						'text-white',
-						'font-bold',
-						'transition-colors',
-						'duration-200'
-					)
+					index?.classList.remove('font-bold', 'text-indigo-600', 'dark:text-indigo-400')
 				}
 			})
 		}
