--- a/src/components/TitlePage.astro
+++ b/src/components/TitlePage.astro
@@ -1,6 +1,6 @@
 ---
 import Title from './Title.astro'
-import Shape from './icons/Shape.astro'
+import BlogLogo from './icons/BlogLogo.astro'
 type Props = {
 	title: string
 }
@@ -9,6 +9,6 @@ const { title } = Astro.props
 ---
 
 <div class='flex justify-start items-center gap-2 title'>
-	<Shape />
+	<BlogLogo />
 	<Title>{title}</Title>
 </div>
