--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,3 +1,3 @@
-<h1 class='text-7xl font-semibold first-letter:uppercase'>
+<h1 class='text-6xl font-light first-letter:uppercase font-mono'>
 	<slot />
 </h1>
