feat: 조회수 제작 완료료

--- a/src/components/icons/BlogLogo.astro
+++ b/src/components/icons/BlogLogo.astro
@@ -1,4 +1,10 @@
-<svg xmlns='http://www.w3.org/2000/svg' width='240' height='240' viewBox='0 0 960 988' fill='none'
+<svg
+	xmlns='http://www.w3.org/2000/svg'
+	width='240'
+	height='240'
+	viewBox='0 0 960 988'
+	fill='none'
+	class='shrink-0'
 	><g clip-path='url(#clip0_0_1)'
 		><path
 			d='M138.355 413.753L257.774 340.988L139.716 215.382C137.736 216.867 136.375 219.218 136.375 222.064V403.234C136.375 406.823 137.117 410.412 138.355 413.753Z'
