--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -2,6 +2,7 @@
 import { Image } from 'astro:assets'
 import FormattedDate from '@/components/FormattedDate'
 import ArrowUp from '@/components/icons/ArrowUp'
+import { ViewCounter } from '@/features/view-count'
 
 const {
 	id,
@@ -9,6 +10,8 @@ const {
 	readTime,
 	slug
 } = Astro.props
+
+const viewCountSlug = id.replace('.mdx', '').replace('.md', '')
 ---
 
 <article class='grid grid-rows-[300px_auto] md:grid-rows-[300px_220px] min-h-full group'>
@@ -25,9 +28,11 @@ const {
 		<div class='z-30 absolute bottom-0 w-full h-20'>
 			<div class='-z-10 absolute bottom-0 glass w-full min-h-full'></div>
 			<div class='flex items-center justify-between gap-x-1 text-white px-6 py-4'>
-				<div class='flex flex-col gap-1 items-center justify-center'>
+				<div class='flex flex-col gap-1 justify-center'>
 					<FormattedDate date={pubDate} />
-					<span class='text-sm'> {readTime}</span>
+					<span class='text-sm'
+						>{readTime} <ViewCounter client:load slug={viewCountSlug} increment={false} /></span
+					>
 				</div>
 
 				<span class='pb-4'>{category}</span>
