--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,19 +3,26 @@ import type { CollectionEntry } from 'astro:content'
 import FormattedDate from '@/components/FormattedDate'
 import BaseLayout from '@/layouts/BaseLayout'
 import Tag from '@/components/Tag'
-import type { MarkdownHeading } from 'astro'
+import { ViewCounter } from '@/features/view-count'
 import { Image } from 'astro:assets'
 
-type Props = {
+type Heading = {
+	depth: number
+	slug: string
+	text: string
+}
+
+interface Props {
 	id: CollectionEntry<'blog'>['id']
 	data: CollectionEntry<'blog'>['data']
-	headings: MarkdownHeading[]
+	headings: Heading[]
 	readTime: string
 }
 
 const { data, readTime, headings, id } = Astro.props
 const { title, description, pubDate, heroImage, tags } = data
 
+const slug = id.replace('.mdx', '').replace('.md', '')
 const articleDate = pubDate.toISOString()
 ---
 
@@ -28,14 +35,10 @@ const articleDate = pubDate.toISOString()
 	<article class='min-w-full md:py-4 sm:max-w-none md:max-w-none'>
 		<header class='mb-3 flex flex-col justify-center items-center gap-6'>
 			<div class='flex flex-col gap-2'>
-				<div class='flex items-center justify-center gap-x-1'>
-					<p class='text-center text-sm text-opacity-50'>
-						Published <FormattedDate date={pubDate} />
-					</p>
-					<p class='text-center text-sm text-opacity-50 font-bold'>
-						- {readTime}
-					</p>
-				</div>
+				<p class='text-center text-sm text-opacity-50'>
+					Published <FormattedDate date={pubDate} /> - <span class='font-bold'>{readTime}</span>
+					<span class='font-bold'><ViewCounter client:load slug={slug} increment={true} /></span>
+				</p>
 				<h1 class='text-center text-4xl md:text-6xl md:pb-2.5 font-semibold'>
 					{title}
 				</h1>
